Package_Tools/include-C/hdf5/serial/c/in_arbeit/h/H5Fpublic.h


#define H5F_ACC_RDONLY ( 0x0000u) 
#define H5F_ACC_RDWR   ( 0x0001u) 
#define H5F_ACC_TRUNC  ( 0x0002u) 
#define H5F_ACC_EXCL   ( 0x0004u) 
#define H5F_ACC_CREAT ( 0x0010u) 
#define H5F_ACC_SWMR_WRITE                                                                                   \
    (0x0020u) 
#define H5F_ACC_SWMR_READ                                                                                    \
    (0x0040u) 
#define H5F_ACC_DEFAULT ( 0xffffu)
#define H5F_OBJ_FILE     (0x0001u) 
#define H5F_OBJ_DATASET  (0x0002u) 
#define H5F_OBJ_GROUP    (0x0004u) 
#define H5F_OBJ_DATATYPE (0x0008u) 
#define H5F_OBJ_ATTR     (0x0010u) 
#define H5F_OBJ_ALL      (H5F_OBJ_FILE | H5F_OBJ_DATASET | H5F_OBJ_GROUP | H5F_OBJ_DATATYPE | H5F_OBJ_ATTR)
#define H5F_OBJ_LOCAL                                                                                        \
    (0x0020u) 
typedef enum H5F_scope_t {
    H5F_SCOPE_LOCAL  = 0, 
    H5F_SCOPE_GLOBAL = 1  
} H5F_scope_t;
typedef enum H5F_close_degree_t {
    H5F_CLOSE_DEFAULT = 0, 
    H5F_CLOSE_WEAK    = 1, 
    H5F_CLOSE_SEMI    = 2, 
    H5F_CLOSE_STRONG  = 3  
} H5F_close_degree_t;
typedef struct H5F_info2_t {
    struct {
        unsigned version;        
        hsize_t  super_size;     
        hsize_t  super_ext_size; 
    } super;
    struct {
        unsigned version;   
        hsize_t  meta_size; 
        hsize_t  tot_space; 
    } free;
    struct {
        unsigned     version;   
        hsize_t      hdr_size;  
        H5_ih_info_t msgs_info; 
    } sohm;
} H5F_info2_t;
typedef enum H5F_mem_t {
    H5FD_MEM_NOLIST = -1, 
    H5FD_MEM_DEFAULT = 0, 
    H5FD_MEM_SUPER = 1,   
    H5FD_MEM_BTREE = 2,   
    H5FD_MEM_DRAW  = 3,   
    H5FD_MEM_GHEAP = 4,   
    H5FD_MEM_LHEAP = 5,   
    H5FD_MEM_OHDR  = 6,   
    H5FD_MEM_NTYPES 
} H5F_mem_t;
typedef struct H5F_sect_info_t {
    haddr_t addr; 
    hsize_t size; 
} H5F_sect_info_t;
typedef enum H5F_libver_t {
    H5F_LIBVER_ERROR    = -1,
    H5F_LIBVER_EARLIEST = 0, 
    H5F_LIBVER_V18      = 1, 
    H5F_LIBVER_V110     = 2, 
    H5F_LIBVER_NBOUNDS       
} H5F_libver_t;
#define H5F_LIBVER_LATEST H5F_LIBVER_V110
typedef enum H5F_fspace_strategy_t {
    H5F_FSPACE_STRATEGY_FSM_AGGR = 0, 
    H5F_FSPACE_STRATEGY_PAGE =
        1, 
    H5F_FSPACE_STRATEGY_AGGR = 2, 
    H5F_FSPACE_STRATEGY_NONE = 3, 
    H5F_FSPACE_STRATEGY_NTYPES    
} H5F_fspace_strategy_t;
typedef enum H5F_file_space_type_t {
    H5F_FILE_SPACE_DEFAULT     = 0, 
    H5F_FILE_SPACE_ALL_PERSIST = 1, 
    H5F_FILE_SPACE_ALL         = 2, 
    H5F_FILE_SPACE_AGGR_VFD = 3,    
    H5F_FILE_SPACE_VFD      = 4,    
    H5F_FILE_SPACE_NTYPES           
} H5F_file_space_type_t;
#define H5F_NUM_METADATA_READ_RETRY_TYPES 21
typedef struct H5F_retry_info_t {
    unsigned  nbins;
    uint32_t *retries[H5F_NUM_METADATA_READ_RETRY_TYPES];
} H5F_retry_info_t;
extern htri_t H5Fis_hdf5(const char *filename);
extern hid_t H5Fcreate(const char *filename, unsigned flags, hid_t fcpl_id, hid_t fapl_id);
extern hid_t H5Fopen(const char *filename, unsigned flags, hid_t fapl_id);
extern hid_t H5Freopen(hid_t file_id);
extern herr_t H5Fflush(hid_t object_id, H5F_scope_t scope);
extern herr_t H5Fclose(hid_t file_id);
extern hid_t H5Fget_create_plist(hid_t file_id);
extern hid_t H5Fget_access_plist(hid_t file_id);
extern herr_t H5Fget_intent(hid_t file_id, unsigned *intent);
extern ssize_t H5Fget_obj_count(hid_t file_id, unsigned types);
extern ssize_t H5Fget_obj_ids(hid_t file_id, unsigned types, size_t max_objs, hid_t *obj_id_list);
extern herr_t H5Fget_vfd_handle(hid_t file_id, hid_t fapl, void **file_handle);
extern herr_t H5Fmount(hid_t loc, const char *name, hid_t child, hid_t plist);
extern herr_t H5Funmount(hid_t loc, const char *name);
extern hssize_t H5Fget_freespace(hid_t file_id);
extern herr_t H5Fget_filesize(hid_t file_id, hsize_t *size);
extern herr_t H5Fget_eoa(hid_t file_id, haddr_t *eoa);
extern herr_t H5Fincrement_filesize(hid_t file_id, hsize_t increment);
extern ssize_t H5Fget_file_image(hid_t file_id, void *buf_ptr, size_t buf_len);
extern herr_t H5Fget_mdc_config(hid_t file_id, H5AC_cache_config_t *config_ptr);
extern herr_t H5Fset_mdc_config(hid_t file_id, H5AC_cache_config_t *config_ptr);
extern herr_t H5Fget_mdc_hit_rate(hid_t file_id, double *hit_rate_ptr);
extern herr_t H5Fget_mdc_size(hid_t file_id, size_t *max_size_ptr, size_t *min_clean_size_ptr,
                              size_t *cur_size_ptr, int *cur_num_entries_ptr);
extern herr_t H5Freset_mdc_hit_rate_stats(hid_t file_id);
extern ssize_t H5Fget_name(hid_t obj_id, char *name, size_t size);
extern herr_t H5Fget_info2(hid_t obj_id, H5F_info2_t *file_info);
extern herr_t H5Fget_metadata_read_retry_info(hid_t file_id, H5F_retry_info_t *info);
extern herr_t H5Fstart_swmr_write(hid_t file_id);
extern ssize_t H5Fget_free_sections(hid_t file_id, H5F_mem_t type, size_t nsects,
                                    H5F_sect_info_t *sect_info );
extern herr_t H5Fclear_elink_file_cache(hid_t file_id);
extern herr_t H5Fset_libver_bounds(hid_t file_id, H5F_libver_t low, H5F_libver_t high);
extern herr_t H5Fstart_mdc_logging(hid_t file_id);
extern herr_t H5Fstop_mdc_logging(hid_t file_id);
extern herr_t H5Fget_mdc_logging_status(hid_t file_id, hbool_t *is_enabled, hbool_t *is_currently_logging);
extern herr_t H5Fformat_convert(hid_t fid);
extern herr_t H5Freset_page_buffering_stats(hid_t file_id);
extern herr_t H5Fget_page_buffering_stats(hid_t file_id, unsigned accesses[2], unsigned hits[2],
                                          unsigned misses[2], unsigned evictions[2], unsigned bypasses[2]);
extern herr_t H5Fget_mdc_image_info(hid_t file_id, haddr_t *image_addr, hsize_t *image_size);
extern herr_t H5Fget_dset_no_attrs_hint(hid_t file_id, hbool_t *minimize);
extern herr_t H5Fset_dset_no_attrs_hint(hid_t file_id, hbool_t minimize);
extern herr_t H5Fset_mpi_atomicity(hid_t file_id, hbool_t flag);
extern herr_t H5Fget_mpi_atomicity(hid_t file_id, hbool_t *flag);
#define H5F_ACC_DEBUG ( 0x0000u) 
typedef struct H5F_info1_t {
    hsize_t super_ext_size; 
    struct {
        hsize_t      hdr_size;  
        H5_ih_info_t msgs_info; 
    } sohm;
} H5F_info1_t;
extern herr_t H5Fget_info1(hid_t obj_id, H5F_info1_t *file_info);
extern herr_t H5Fset_latest_format(hid_t file_id, hbool_t latest_format);